# personalised__email_agent

research-crew-frontend/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
research-crew-frontend/.next/: trace
research-crew-frontend/.next/cache/: .rscinfo
research-crew-frontend/.next/server/: app-paths-manifest.json  edge-runtime-webpack.js  middleware-manifest.json  middleware.js  server-reference-manifest.json  webpack-runtime.js
research-crew-frontend/.next/server/app/: page.js  page_client-reference-manifest.js
research-crew-frontend/.next/server/vendor-chunks/: @swc.js  jose.js  next.js
research-crew-frontend/.next/static/chunks/: app-pages-internals.js  webpack.js
research-crew-frontend/.next/static/webpack/: webpack.2d24d97a4cc6a91f.hot-update.js  (+3 more)
research-crew-frontend/src/: middleware.ts
research-crew-frontend/src/app/: globals.css  layout.tsx  page.tsx
research-crew-frontend/src/components/: CompanyForm.tsx  EmailOutput.tsx  Loading.tsx
research-crew-frontend/src/lib/: api.ts  auth.ts
research-crew-frontend/src/types/: index.ts
research_crew/: config.md  email.md  pyproject.toml  pyproject.toml (update)  requirements.txt
research_crew/frontend/: index.html
research_crew/src/: email.md
research_crew/src/research_crew/: api.py  crew.py  email.md  main.py
research_crew/src/research_crew/config/: agents.yaml  tasks.yaml
research_crew/src/research_crew/tools/: __init__.py  custom_tool.py
research_crew/tests/: __init__.py  conftest.py  test_crew.py
(+22 files in other folders)
